--- a/Lab.Livraria/packages.config
+++ b/Lab.Livraria/packages.config
@@ -27,5 +27,8 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net462" />
   <package id="Respond" version="1.4.2" targetFramework="net462" />
+  <package id="SimpleInjector" version="4.0.7" targetFramework="net462" />
+  <package id="SimpleInjector.Integration.Web" version="4.0.7" targetFramework="net462" />
+  <package id="SimpleInjector.Integration.Web.Mvc" version="4.0.7" targetFramework="net462" />
   <package id="WebGrease" version="1.6.0" targetFramework="net462" />
 </packages>
